fix: various replaced element widths too wide

--- a/resources/less/forum/extension.less
+++ b/resources/less/forum/extension.less
@@ -11,7 +11,7 @@
   // Prevents interactivity with items within the excerpt
   pointer-events: none;
 
-  img {
+  * {
     max-width: 100%
   }
 
